# veza-web-app

./: .gitignore  CHAT_DONNEES_REELLES_SUCCES.md  CHAT_FRONTEND_CORRIGE_SUCCES.md  CHAT_REACT_REFONTE_SUCCES.md  CHAT_REPARE_SUCCES.md  MIGRATION_REACT_COMPLETE.md  QUICK_TEST_CHAT.md  README.md  RUST_CHAT_SETUP.md  backend_documentation.md  dev-coordinated.sh  dev-start.sh  frontend_documentation.md  full_project_tree.txt  internal_tree.txt  package-lock.json  package.json  start-rust-chat.sh  test-chat-avec-token-valide.md  test-chat-donnees-reelles.sh  test-chat-reel.md  test-chat-repare.sh  test-chat.md  test-token-expire.md  test.txt  test_endpoints_result.txt  tests_post_reorganize.sh  tree.txt  tree_backend.txt  veza-dev.sh
backend/: .env.example  .env.old  Makefile  check.go  check_2.go  go.mod  go.sum  main.go  pre_reorganisation_main.go  run.sh
backend/modules/chat_server/: Cargo.toml
backend/modules/chat_server/src/: main.rs  messages.rs
backend/modules/chat_server/src/hub/: dm.rs  mod.rs  room.rs
backend_lighted/modules/stream_server/: Cargo.toml
frontend/: .babelrc  .eslintrc.json  .gitignore  .prettierrc  README.md  admin_products.html  api.html  chat.html  dashboard.html  dm.html  hub.html  hub_v2.html  jest.config.js  listings.html  login.html  message.html  package-lock.json  package.json  plouf.html  postcss.config.js  produits.html  register.html  (+11 more)
frontend-refactor-docs/: 01-overview.md  02-archiitecture.md  03-components.md  04-state-management.md  05-api-integration.md  06-optimization.md  07-testing.md  08-implementation.md  09-tauri.md
(+534 files in other folders)
