[package]
name = "stream_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.36", features = ["full"] }
tower = "0.4"
mime_guess = "2.0"
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = "0.3"
headers = "0.4"

# Ajout de `typed-header`
axum-extra = { version = "0.9", features = ["typed-header"] }

tower-http = { version = "0.5", features = ["cors"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
url = "2.5"
chrono = { version = "0.4", features = ["clock"] }